STM32CUBEIDE/.metadata/.plugins/org.eclipse.cdt.ui/delay.build.log
23:36:51 **** Build of configuration Debug for project delay ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -c -x assembler-with-cpp --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f446retx.o" "../Startup/startup_stm32f446retx.s"
arm-none-eabi-gcc "../Src/delay.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/delay.d" -MT"Src/delay.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/delay.o"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/delay.c: In function 'delay_ms':
../Src/delay.c:13:2: error: unknown type name 'uint32_t'
  uint32_t *stk_ctrl = (uint32_t*) 0xE000E010; //systick timer
  ^~~~~~~~
../Src/delay.c:13:24: error: 'uint32_t' undeclared (first use in this function)
  uint32_t *stk_ctrl = (uint32_t*) 0xE000E010; //systick timer
                        ^~~~~~~~
../Src/delay.c:13:24: note: each undeclared identifier is reported only once for each function it appears in
../Src/delay.c:13:33: error: expected expression before ')' token
  uint32_t *stk_ctrl = (uint32_t*) 0xE000E010; //systick timer
                                 ^
../Src/delay.c:15:3: error: 'stck_ctrl' undeclared (first use in this function); did you mean 'stk_ctrl'?
  *stck_ctrl = stck_ctrl|enable;
   ^~~~~~~~~
   stk_ctrl
../Src/delay.c:19:12: error: 'stk_load' undeclared (first use in this function); did you mean 'stk_ctrl'?
  uint32_t *stk_load = (uint32_t*) 0xE000E014; //reload value
            ^~~~~~~~
            stk_ctrl
../Src/delay.c:19:33: error: expected expression before ')' token
  uint32_t *stk_load = (uint32_t*) 0xE000E014; //reload value
                                 ^
../Src/delay.c:13:12: warning: unused variable 'stk_ctrl' [-Wunused-variable]
  uint32_t *stk_ctrl = (uint32_t*) 0xE000E010; //systick timer
            ^~~~~~~~
make: *** [Src/subdir.mk:27: Src/delay.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

23:36:53 Build Failed. 8 errors, 1 warnings. (took 1s.832ms)

